k8/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-products-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-products-app
  template:
    metadata:
      labels:
        app: ms-products-app
    spec:
      containers:
        - name: ms-products-container
          image: ms-products
          imagePullPolicy: Never
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: ms-products-service
spec:
  type: NodePort
  selector:
    app: ms-products-app
  ports:
    - port: 9090
      targetPort: 8080
      nodePort: 30000
