k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-products-ingress-service
  labels:
    name: ms-products-ingress-service
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ms-products-service
                port:
                  number: 8080
